--- a/contato.html
+++ b/contato.html
@@ -27,10 +27,13 @@
   <section class="grid-2">
     <section class="card pad">
       <div class="section-title">Contato</div>
-      <div class="desc">Você pode editar estes dados depois:</div>
+      <div class="desc">
+        Para dúvidas, interesse em obras ou informações adicionais sobre os leilões,
+        você pode entrar em contato pelos canais abaixo.
+      </div>
 
       <div class="contact-box">
-        <div><strong>Telefone/WhatsApp:</strong> (editar)</div>
+        <div><strong>Telefone / WhatsApp:</strong> (editar)</div>
         <div><strong>Instagram:</strong> (editar)</div>
         <div><strong>E-mail:</strong> (editar)</div>
       </div>
@@ -43,7 +46,17 @@
           <img src="assets/img/autora.jpg" alt="Foto da autora">
         </div>
         <div class="about-text">
-          <p class="desc">(Escreva aqui uma mini descrição sua no campo da arte.)</p>
+          <p class="desc">
+            Sou artista visual e trabalho com produção autoral em diferentes técnicas.
+            Este espaço foi criado para apresentar meu trabalho e viabilizar leilões
+            de forma direta, simples e transparente.
+          </p>
+
+          <p class="desc">
+            Cada obra carrega um processo único. Os leilões são uma forma de aproximar
+            quem cria de quem coleciona, preservando o respeito pelo trabalho artístico
+            e pela experiência de aquisição.
+          </p>
         </div>
       </div>
     </section>
