--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     </div>
 
     <nav class="nav">
+      <a class="btn btn-ghost" href="galeria.html">Galeria</a>
+      <a class="btn btn-ghost" href="leiloes.html">Leilões</a>
       <a class="btn btn-primary" href="contato.html">Fale Conosco</a>
     </nav>
   </div>
@@ -25,9 +27,7 @@
   <section class="card notice">
     <div class="notice-title">QUADRO DE AVISOS</div>
     <div class="notice-body">
-      <p>
-        Está aberto o <strong>1º Leilão da Obra X</strong>.
-      </p>
+      <p>Está aberto o <strong>1º Leilão da Obra X</strong>.</p>
       <p>
         O leilão terá início no dia __/__/____, às __h__,
         seguindo o horário de Brasília.
